Fixes body overflow for IE10

--- a/packages/ribbon/styles/screen.scss
+++ b/packages/ribbon/styles/screen.scss
@@ -244,6 +244,8 @@ body {
 // List
 // -------------------------------
 .list {
+	position:absolute;
+	clip:rect(0, auto, auto, 0); // Having fun with IE10
 	padding:80px 0 40px 100px;
 	background:#585A5E url(../images/linen.png);
 	@include retina {
